--- a/work.css
+++ b/work.css
@@ -1,3 +1,4 @@
+/*作品頁*/
 .draw {
   display: flex;
   max-width: 1400px;
@@ -56,7 +57,7 @@
 }
 .draw-board h1 {
   color: #6e574a;
-  font-size: 35px;
+  font-size: 30px;
   font-weight: 600;
   margin-bottom: 30px;
   font-family: "Jost", sans-serif;
@@ -66,7 +67,7 @@
   color: #6e574a;
   text-align: left;
   font-family: "Jost";
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 30px;
 }
@@ -124,7 +125,7 @@
   box-shadow: 0px 4px 8px rgba(110, 87, 74, 0.2);
   transform: scale(0.98);
 }
-@media (max-width: 1500px) {
+@media (max-width: 1440px) {
   .draw {
     align-items: center;
   }
@@ -132,24 +133,34 @@
     display: none;
   }
   .draw-board {
-    width: 900px;
-    height: 1000px;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    width: 1000px;
+    height: 500px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
     align-content: center;
     align-items: center;
     gap: 50px;
     position: relative;
   }
+  .draw-content {
+    width: 400px;
+    height: 350px;
+  }
+  .draw-pht1 {
+    width: 350px;
+    height: 350px;
+    transition: all 0.2s;
+    z-index: 2;
+  }
   .draw-pht2 {
-    width: 495px;
-    height: 495px;
+    width: 350px;
+    height: 350px;
     transition: all 0.2s;
     position: absolute;
     z-index: 1;
-    top: 98px;
-    left: 202px;
+    top: 75px;
+    left: 100px;
   }
 }
