--- a/css/style.css
+++ b/css/style.css
@@ -92,11 +92,19 @@ body {
 /*手機*/
 .nav-list-phone {
   display: none;
-  width: 100;
+  position: fixed;
+  top: -100%;
+  left: 0;
+  width: 100%;
   height: 104px;
   align-items: center;
   justify-content: center;
   background-color: #6e574a;
+  z-index: 9999;
+  transition: all 0.8s;
+}
+.nav-list-btn {
+  display: none;
 }
 .nav-item-phone {
   padding: 1px 20px;
@@ -122,6 +130,23 @@ body {
   display: none;
   width: 12px;
   height: 12px;
+}
+.nav-list-phone.active {
+  top: 0%;
+}
+.overlay {
+  width: 100%;
+  height: 100%;
+  background-color: #f4eee9;
+  opacity: 0.2;
+  position: fixed;
+  z-index: 9000;
+  top: 0;
+  left: 0;
+  display: none;
+}
+.overlay.active {
+  display: flex;
 }
 @media (max-width: 1440px) {
   .nav-logo-img {
@@ -157,6 +182,15 @@ body {
   }
 }
 @media (max-width: 520px) {
+  .nav-list-phone {
+    display: flex;
+  }
+  .nav-list-btn {
+    display: flex;
+    border: none;
+    padding: 8px 12px;
+    cursor: pointer;
+  }
   .nav-outside {
     width: 100%;
   }
