--- a/css/work.css
+++ b/css/work.css
@@ -60,6 +60,7 @@
   font-size: 30px;
   font-weight: 600;
   margin-bottom: 30px;
+  text-align: center;
   font-family: "Jost", sans-serif;
   font-family: "Noto Sans TC", sans-serif;
 }
@@ -98,6 +99,12 @@
   justify-content: center;
   align-items: flex-start;
 }
+.draw-btn-box {
+  display: flex;
+  gap: 14px;
+  flex-direction: row;
+  justify-content: flex-start;
+}
 .draw-btn {
   font-size: 20px;
   font-weight: 600;
@@ -106,7 +113,7 @@
   background-color: #6e574a;
   border-radius: 50px;
   font-family: "Jost", sans-serif;
-  border: 0px solid #6e574a;
+  border: 0px solid;
   display: inline-block;
   padding: 25px 40px 25px 40px;
   margin: 40px 7px 0px 0px;
@@ -122,6 +129,33 @@
   transition: all 0.2s;
 }
 .draw-btn:active {
+  box-shadow: 0px 4px 8px rgba(110, 87, 74, 0.2);
+  transform: scale(0.98);
+}
+.draw-btn-2 {
+  font-size: 20px;
+  font-weight: 600;
+  color: #f4eee9;
+  font-family: "Jost", sans-serif;
+  background-color: #b25f2f;
+  border-radius: 50px;
+  font-family: "Jost", sans-serif;
+  border: 0px solid;
+  display: inline-block;
+  padding: 25px 40px 25px 40px;
+  margin: 40px 7px 0px 0px;
+  transition: all 0.5s;
+  box-shadow: #B25F2F(0, 0, 0, 0.35) 0px 5px 15px;
+  text-decoration: none;
+}
+.draw-btn-2:hover {
+  box-shadow: 0px 10px 10px 0px rgba(110, 87, 74, 0.2);
+  transform: scale(1.03);
+  transform: translateY(-8px);
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.draw-btn-2:active {
   box-shadow: 0px 4px 8px rgba(110, 87, 74, 0.2);
   transform: scale(0.98);
 }
@@ -205,7 +239,12 @@
   }
   .draw-btn {
     font-size: 16px;
-    padding: 20px 35px 20px 35px;
+    padding: 20px 30px 20px 30px;
+    margin: 30px 0px 0px 0px;
+  }
+  .draw-btn-2 {
+    font-size: 16px;
+    padding: 20px 30px 20px 30px;
     margin: 30px 0px 0px 0px;
   }
   .draw-board h1 {
@@ -244,7 +283,7 @@
   }
   .draw-board {
     width: 560px;
-    height: 620px;
+    height: 60px;
     padding-top: 50px;
     padding-bottom: 50px;
     flex-direction: column;
@@ -258,7 +297,12 @@
   }
   .draw-btn {
     font-size: 16px;
-    padding: 20px 35px 20px 35px;
+    padding: 20px 30px 20px 30px;
+    margin: 20px 0px 0px 0px;
+  }
+  .draw-btn-2 {
+    font-size: 16px;
+    padding: 20px 30px 20px 30px;
     margin: 20px 0px 0px 0px;
   }
   .draw-board h1 {
@@ -267,7 +311,7 @@
   }
   .draw-board p {
     color: #6e574a;
-    text-align: left;
+    text-align: center;
     font-family: "Jost";
     font-size: 14px;
     font-weight: 500;
@@ -318,9 +362,20 @@
     height: 200px;
     gap: 20px;
   }
+  .draw-btn-box {
+    display: flex;
+    gap: 8px;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
   .draw-btn {
     font-size: 14px;
-    padding: 15px 30px 15px 30px;
+    padding: 15px 22px 15px 22px;
+    margin: 0px 0px 0px 0px;
+  }
+  .draw-btn-2 {
+    font-size: 14px;
+    padding: 15px 22px 15px 22px;
     margin: 0px 0px 0px 0px;
   }
   .draw-board h1 {
